--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -8,15 +8,15 @@ node {
   }
 
   stage('test') {
-    nodejs(nodeJSInstallationName: 'nodejs') {
+    nodejs(nodeJSInstallationName: 'nodejs17') {
       sh 'npm install --only=Dev'
       sh 'npm test'
     }
   }
 
-  stage('docker build/push') {
-    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-      def app = docker.build("amit0511/docker-nodejs-demo:${commit_id}", '.').push()
+  stage('docker build and publish') {
+    docker.withRegistry('https://index.docker.io/v1/', 'DockerLoginCreds') {
+      def app = docker.build('amit0511/docker-nodejs-demo:${commit_id}', '.').push()
     }
   }
 }
