--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -8,7 +8,7 @@ node {
   }
 
   stage('test') {
-    nodejs(nodeJSInstallationName: 'nodejs17') {
+    nodejs('nodejs17') {
       sh 'npm install --only=Dev'
       sh 'npm test'
     }
