fixed build tag issue

--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -16,7 +16,7 @@ node {
 
   stage('docker build and publish') {
     docker.withRegistry('https://index.docker.io/v1/', 'DockerLoginCreds') {
-      def app = docker.build('amit0511/docker-nodejs-demo:${commit_id}', '.').push()
+      def app = docker.build("amit0511/docker-nodejs-demo:${commit_id}", '.').push()
     }
   }
 }
